--- a/resources/stylesheet.css
+++ b/resources/stylesheet.css
@@ -31,6 +31,8 @@ div.page {
   border-top-right-radius: 0.5em;
   border-bottom-right-radius: 0.5em;
   border-bottom-left-radius: 0.5em;
+  padding-left: 2ex;
+  padding-right: 2ex;
 }
 
 /*
@@ -41,6 +43,17 @@ div.page {
 
 body
 {
+}
+
+PRE
+{
+  background-color: rgb(224,224,224);
+  margin-left: 4ex;
+  margin-right: 4ex;
+  padding-left: 2ex;
+  padding-right: 2ex;
+  padding-top: 1ex;
+  padding-bottom: 1ex;
 }
 
 div.head,
@@ -209,4 +222,5 @@ P.site {
      color: blue;
    }
 }
+
 
