--- a/css/theme.css
+++ b/css/theme.css
@@ -1,11 +1,3 @@
-.text-nowrap {
-  white-space: nowrap;
-}
-
-h1, h2 {
-  border-bottom: 0.5px solid gray;
-}
-
 blockquote {
   color: #808080;
   border: none;
@@ -14,86 +6,49 @@ blockquote {
   margin-bottom: 5px;
 }
 
-nav.navbar {
-  margin-bottom: 0;
-}
-
-.navbar-brand {
-    line-height: 15px;
-    color: white;
-}
-.navbar-brand link {
-    color: white;
-    line-height: 15px;
-    font-size: 15px;
-    padding-top: 4px;
-    padding-bottom: 2px;
-}
-
-.subtitle {
-  font-size: 12px;
-}
-
-table.table thead tr th {
-  text-align: center;
-}
-
-table.table tbody tr td {
-  vertical-align: middle;
-}
-
-table.table tbody tr.week-header {
-  background-color: #0000df;
-  font-weight: bold;
-  color: #ffffff;
-}
-
-table.table tbody tr.column-header {
-  background-color: #dddddd;
-  font-weight: bold;
-}
-
-div.footer {
-  font-size: 80%;
-}
-
-nav.navbar-inverse .navbar-nav .dropdown,
-nav.navbar-inverse .navbar-nav .dropdown a,
-nav.navbar-inverse, 
-nav.navbar-inverse .navbar-nav > li > a,
-nav.navbar-inverse .navbar-nav > li > a:hover,
-.navbar-inverse .navbar-collapse,
-.navbar-inverse .navbar-form,
-.navbar-collapse.collapse,
-.navbar-collapse.collapsing {
-  background-color: var(--primary-bg-color);
-  border-color: var(--highlight-color);
-  color: white;
-}
-
-nav.navbar-inverse .navbar-nav .active a,
-nav.navbar-inverse .navbar-nav a:hover,
-nav.navbar-inverse .navbar-nav .active a:hover,
-.navbar-inverse .navbar-toggle:hover,
-.navbar-inverse .navbar-toggle:focus,
-.navbar-inverse .navbar-nav > .open > a,
-.navbar-inverse .navbar-nav > .open > a:hover,
-.navbar-inverse .navbar-nav > .open > a:focus {
-  background-color: var(--highlight-color);
-}
-
-table.table tbody tr.week-header {
-  background-color: var(--primary-bg-color);
-  font-weight: bold;
-  color: #000000;
-}
-
-table ul.list-unstyled {
-  margin-bottom: 0;
-}
-
 blockquote p {
   font-size: 15px;
+}
+
+/*
+ * Collapsing navbar from
+ *   https://coderwall.com/p/wpjw4w/change-the-bootstrap-navbar-breakpoint
+ */
+@media (max-width: 1200px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
 }
 
 /*
@@ -107,7 +62,8 @@ blockquote p {
  * There might be a simpler way to do this, but it works
  * perfectly.
  */
-@media (max-width: 991px) {
+/*
+@media (max-width: 1200px) {
   .navbar-header {
       float: none;
   }
@@ -143,3 +99,4 @@ blockquote p {
       display:block !important;
   }
 }
+*/
