--- a/css/theme.css
+++ b/css/theme.css
@@ -10,6 +10,10 @@ blockquote p {
   font-size: 15px;
 }
 
+div.footer {
+  font-size: 13px;
+}
+
 /*
  * Collapsing navbar from
  *   https://coderwall.com/p/wpjw4w/change-the-bootstrap-navbar-breakpoint
@@ -50,53 +54,3 @@ blockquote p {
         display:block !important;
     }
 }
-
-/*
- * The code below changes the collapse point of the navbar
- * so that it collapses before any of the links fall into
- * multiple rows.
- *
- * This was written by ZimSystem in response to question
- * http://stackoverflow.com/questions/19827605/.
- *
- * There might be a simpler way to do this, but it works
- * perfectly.
- */
-/*
-@media (max-width: 1200px) {
-  .navbar-header {
-      float: none;
-  }
-  .navbar-left,.navbar-right {
-      float: none !important;
-  }
-  .navbar-toggle {
-      display: block;
-  }
-  .navbar-collapse {
-      border-top: 1px solid transparent;
-      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-  }
-  .navbar-fixed-top {
-      top: 0;
-      border-width: 0 0 1px;
-  }
-  .navbar-collapse.collapse {
-      display: none!important;
-  }
-  .navbar-nav {
-      float: none!important;
-      margin-top: 7.5px;
-  }
-  .navbar-nav>li {
-      float: none;
-  }
-  .navbar-nav>li>a {
-      padding-top: 10px;
-      padding-bottom: 10px;
-  }
-  .collapse.in{
-      display:block !important;
-  }
-}
-*/
